# netsketch

./: .clang-format  .gitignore  CMakeLists.txt  DESIGN  LICENSE  README.md  build-bench.sh  build-json.sh  build-rel.sh  build-tsan.sh  build.sh  client-debug.sh  client.sh  collect-data.sh  data.csv  debug.sh  format.sh  leak.sh  main  netsketch-client-networking-log 2024-04-17 15:47:57.378206019  netsketch-raylib-log 2024-04-12 10:22:20.492370  netsketch-raylib-log 2024-04-12 10:46:30.106957  output  run.sh  server-debug.sh  server.sh  stress-server-other-actions.sh  stress-server.sh  test  xcode.sh
logs-and-tests/json-output-fixed-data-race/: tagged_vector_juan0.json  tagged_vector_juan4.json
logs-and-tests/json-output-with-data-race/: tagged_vector_juan0.json  tagged_vector_juan2.json  tagged_vector_server.json
logs-and-tests/stress-tests/: data.csv
report/: main.tex  uom-coursework.cls
report/images/plantuml/: types.pu
report/images/unedited-notes/: .2024-06-19-Note-22-01.autosave.xopp  2024-06-19-Note-22-01.xopp
scripts/: copy_compile_commands.sh
src/: CMakeLists.txt  Main.cpp  file.hpp
src/analysis/: AnalysisVisitor.cpp  AnalysisVisitor.hpp  EnvStack.cpp  EnvStack.hpp  ReturnVisitor.cpp  ReturnVisitor.hpp
src/backend/: Environment.cpp  Environment.hpp  Symbol.hpp
src/bench/: bench.cpp  bench.hpp
src/client/: client_channel.hpp  command_input.cpp  command_input.hpp  gui.cpp  gui.hpp  input_handler.cpp  input_handler.hpp  input_parser.cpp  input_parser.hpp  log_file.hpp  main.cpp  network_handler.cpp  network_handler.hpp  network_manager.cpp  network_manager.hpp  reader.cpp  reader.hpp  runner.cpp  runner.hpp  share.cpp  share.hpp  writer.cpp  writer.hpp
src/client/old/: client_channel.cpp  client_channel.hpp  network_manager.cpp  network_manager.hpp  reader.cpp  writer.cpp  writer.hpp
src/common/: abort.hpp  bench.hpp  bytes.hpp  channel.hpp  draw_list.hpp  event.hpp  log.hpp  log_file.hpp  logger.hpp  network.hpp  overload.hpp  protocol.hpp  serial.hpp  serialization.hpp  tagged_draw_vector_wrapper.hpp  threading.hpp  timer.hpp  types.hpp  types2.hpp  utils.hpp
src/common/old/: channel.hpp  draw_list.hpp  event.hpp  protocol.hpp  types2.hpp
src/exporter/: main.cpp  runner.cpp  runner.hpp  share.cpp  share.hpp
src/ir_gen/: GenVisitor.cpp  GenVisitor.hpp  RefStack.cpp  RefStack.hpp  TypeVisitor.cpp  TypeVisitor.hpp  VarDeclCountVisitor.cpp  VarDeclCountVisitor.hpp
src/lexer/: Dfsa.cpp  Dfsa.hpp  Lexer.cpp  Lexer.hpp  LexerBuilder.cpp  LexerBuilder.hpp  LexerDirector.cpp  LexerDirector.hpp
src/log/: log.hpp  log_file.hpp
src/network/: Channel.hpp  channel.hpp  network.hpp
src/parl/: AST.cpp  AST.hpp  Core.hpp  Errors.cpp  Errors.hpp  Token.cpp  Token.hpp  Value.hpp  Visitor.hpp
src/parser/: Parser.cpp  Parser.hpp  PrinterVisitor.cpp  PrinterVisitor.hpp
src/preprocess/: IsFunctionVisitor.cpp  IsFunctionVisitor.hpp  ReorderVisitor.cpp  ReorderVisitor.hpp
src/runner/: Runner.cpp  Runner.hpp
src/server/: conn_handler.cpp  conn_handler.hpp  main.cpp  runner.cpp  runner.hpp  server.cpp  server.hpp  share.cpp  share.hpp  timer_data.hpp  timing.cpp  timing.hpp  updater.cpp  updater.hpp
src/test_client/: main.cpp  network_manager.cpp  network_manager.hpp  reader.cpp  reader.hpp  runner.cpp  runner.hpp  share.cpp  share.hpp  simulate_user.cpp  simulate_user.hpp  writer.cpp  writer.hpp
src/threading/: threading.hpp
